--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -197,6 +197,28 @@ services:
       retries: 30
       start_period: 90s
 
+  # ===========================================================================
+  # ClickHouse (Enterprise - for access logging)
+  # ===========================================================================
+
+  clickhouse:
+    image: clickhouse/clickhouse-server:24.1
+    profiles:
+      - enterprise  # Only start with: docker compose --profile enterprise up
+    ports:
+      - "8123:8123"
+      - "9000:9000"
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+      - ../enterprise/accesslog/schema.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - zapfs-net
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8123/ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
 # ===========================================================================
 # Shared Volumes for Go Caching
 # ===========================================================================
@@ -204,3 +226,4 @@ services:
 volumes:
   go-mod-cache:
   go-build-cache:
+  clickhouse-data:
