--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -340,6 +340,40 @@ services:
       retries: 3
     command: redis-server --appendonly yes
 
+  # ===========================================================================
+  # ClickHouse (Enterprise - for access logging)
+  # ===========================================================================
+  # Enable this service for S3 access logging with ClickHouse storage.
+  # Requires enterprise license with FeatureAuditLog.
+  #
+  # To enable access logging:
+  #   1. Start with: docker compose --profile enterprise up
+  #   2. Add to metadata command:
+  #      - --access_logs_enabled=true
+  #      - --clickhouse_dsn=clickhouse://clickhouse:9000/zapfs
+  #
+  clickhouse:
+    image: clickhouse/clickhouse-server:24.1
+    profiles:
+      - enterprise  # Only start with: docker compose --profile enterprise up
+    ports:
+      - "8123:8123"  # HTTP interface
+      - "9000:9000"  # Native protocol
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+      - ../enterprise/accesslog/schema.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - zapfs-net
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8123/ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
 # ===========================================================================
 # Networks & Volumes
 # ===========================================================================
@@ -356,3 +390,4 @@ volumes:
   file-2-data:
   mysql-data:
   redis-data:
+  clickhouse-data:
