--- a/cmd/config/file.toml
+++ b/cmd/config/file.toml
@@ -44,6 +44,10 @@ node_id = ""  # Required: set via flag, config, or NODE_ID env var
 index_path = "/tmp/zapfs/index"
 manager_addr = "localhost:8050"
 
+# Garbage Collection
+gc_interval = "1m"       # How often GC runs (0 = disabled)
+gc_grace_period = "5m"   # Grace period before deleting RefCount=0 chunks
+
 # Backend Configuration
 [backends.local_default]
 type = "local"
@@ -62,10 +66,7 @@ enabled = false
 storage_class = "STANDARD"
 
 # Disk Configuration (optional)
+# For multiple disks, define additional backends above
 # [[disks]]
 # id = "disk0"
 # path = "/data/disk0"
-
-backend = "local_default"
-disk_type = "ssd"
-min_free_space = "5"
