--- a/k8s/zapfs/values.yaml
+++ b/k8s/zapfs/values.yaml
@@ -1,5 +1,15 @@
 # ZapFS Helm Chart Values
 # https://github.com/zapfs/zapfs
+#
+# This chart deploys ZapFS, a distributed object storage system with S3-compatible API.
+#
+# Quick Start:
+#   helm install zapfs ./k8s/zapfs \
+#     --set manager.iamMasterKey=$(openssl rand -base64 32) \
+#     --set metadata.database.dsn="zapfs:password@tcp(mysql:3306)/zapfs"
+#
+# For DigitalOcean: see values-digitalocean.yaml
+# For bare metal with high-performance networking: see comments on affinity settings
 
 # =============================================================================
 # Global Settings
@@ -79,6 +89,30 @@ manager:
   nodeSelector: {}
   tolerations: []
   affinity: {}  # If empty, anti-affinity is applied automatically
+
+  # Anti-affinity configuration (when affinity is empty)
+  # - false (default): Soft anti-affinity (preferredDuringScheduling)
+  #   Tries to spread across nodes but allows colocation if needed
+  # - true: Hard anti-affinity (requiredDuringScheduling)
+  #   Strictly requires different nodes - pods will stay Pending if not enough nodes
+  antiAffinityStrict: false
+
+  # Topology spread constraints for multi-zone/rack deployments
+  # Example for zone spreading:
+  # topologySpreadConstraints:
+  #   - maxSkew: 1
+  #     topologyKey: topology.kubernetes.io/zone
+  #     whenUnsatisfiable: DoNotSchedule
+  #     labelSelector:
+  #       matchLabels:
+  #         app.kubernetes.io/component: manager
+  topologySpreadConstraints: []
+
+  # PodDisruptionBudget configuration
+  pdb:
+    enabled: true
+    # minAvailable: 2  # Or specify explicitly (default: maintains Raft quorum)
+    # maxUnavailable: 1
 
   # Service configuration
   service:
@@ -170,7 +204,19 @@ metadata:
   securityContext: {}
   nodeSelector: {}
   tolerations: []
-  affinity: {}
+  affinity: {}  # If empty, anti-affinity is applied automatically
+
+  # Anti-affinity configuration (when affinity is empty)
+  antiAffinityStrict: false
+
+  # Topology spread constraints for multi-zone deployments
+  topologySpreadConstraints: []
+
+  # PodDisruptionBudget configuration
+  pdb:
+    enabled: true
+    # minAvailable: 1  # Default: at least 1 available
+    # maxUnavailable: 1
 
   # Service configuration
   service:
@@ -230,7 +276,36 @@ file:
   securityContext: {}
   nodeSelector: {}
   tolerations: []
-  affinity: {}
+  affinity: {}  # If empty, anti-affinity is applied automatically
+
+  # Anti-affinity configuration (when affinity is empty)
+  antiAffinityStrict: false
+
+  # Colocation with manager nodes (for high-performance networking)
+  # When true, file servers prefer scheduling on same nodes as managers.
+  # Useful for bare metal deployments with:
+  # - UCX/RDMA for low-latency inter-node communication
+  # - NVMe-oF or other high-speed storage fabrics
+  # - GPU-direct storage access
+  # Note: This is a soft preference (weight 50) - anti-affinity still takes priority
+  colocateWithManager: false
+
+  # Topology spread constraints for multi-zone/rack deployments
+  # Example for rack awareness (bare metal):
+  # topologySpreadConstraints:
+  #   - maxSkew: 1
+  #     topologyKey: topology.kubernetes.io/zone  # or custom rack label
+  #     whenUnsatisfiable: ScheduleAnyway
+  #     labelSelector:
+  #       matchLabels:
+  #         app.kubernetes.io/component: file
+  topologySpreadConstraints: []
+
+  # PodDisruptionBudget configuration
+  pdb:
+    enabled: true
+    # minAvailable: 1  # Default: at least 1 available
+    # maxUnavailable: 1
 
   # Service configuration
   service:
