--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ on:
 env:
   GO_VERSION: '1.25.5'
   DOCKER_BUILDKIT: 1
+  # Cache keys for Go build artifacts
+  GOCACHE_KEY: go-build-${{ github.repository }}
 
 jobs:
   # ===========================================================================
@@ -37,6 +39,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: Run unit tests with race detector
         run: make test-race
@@ -58,6 +69,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
@@ -78,8 +98,25 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
+
+      - name: Cache staticcheck binary
+        uses: actions/cache@v4
+        id: staticcheck-cache
+        with:
+          path: ~/go/bin/staticcheck
+          key: staticcheck-${{ runner.os }}-${{ env.GO_VERSION }}-latest
 
       - name: Install staticcheck
+        if: steps.staticcheck-cache.outputs.cache-hit != 'true'
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
@@ -98,6 +135,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: Build enterprise binary
         run: make build
@@ -167,6 +213,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: Download Docker image
         uses: actions/download-artifact@v4
@@ -252,6 +307,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: Download Docker image
         uses: actions/download-artifact@v4
@@ -322,6 +386,15 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
+
+      - name: Cache Go build artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/go-build
+          key: ${{ env.GOCACHE_KEY }}-${{ runner.os }}-${{ hashFiles('**/*.go', 'go.sum') }}
+          restore-keys: |
+            ${{ env.GOCACHE_KEY }}-${{ runner.os }}-
 
       - name: Run metadata tests (in-memory DB)
         run: go test -race -v -tags=integration,enterprise -count=1 ./integration/metadata/...
