--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -298,6 +298,7 @@ services:
       - --node_id=file-1
       - --advertise_addr=file-1:8081
       - --manager_addr=manager-1:8050
+      - --allow_default_backend  # Dev only: auto-create local backend
     ports:
       - "8080:8080"  # HTTP
       - "8081:8081"  # gRPC (integration tests connect here)
@@ -328,6 +329,7 @@ services:
       - --node_id=file-2
       - --advertise_addr=file-2:8091
       - --manager_addr=manager-1:8050
+      - --allow_default_backend  # Dev only: auto-create local backend
     ports:
       - "8090:8090"  # HTTP
       - "8091:8091"  # gRPC (integration tests connect here)
